[gd_scene load_steps=3 format=3 uid="uid://b6px7gktdy1wu"]

[ext_resource type="Script" uid="uid://h6p7cuns7eem" path="res://screen-test/entities/display/scripts/secondary_screen.gd" id="1_yisw8"]
[ext_resource type="PackedScene" uid="uid://dro7uu7vtgsmn" path="res://screen-test/entities/display/scenes/cursor.tscn" id="2_qgyrx"]

[node name="SecondaryScreen" type="Node2D"]
script = ExtResource("1_yisw8")

[node name="Cursor" parent="." instance=ExtResource("2_qgyrx")]
z_index = 4096
position = Vector2(1, 0)

[node name="GridContainer" type="GridContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = 440.0
offset_bottom = 630.0
grow_vertical = 0
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="PrintButton" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Print"

[node name="ArithmeticButton" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Arithmetic"

[node name="SetVarButton" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Set Var"

[node name="NegationButton" type="Button" parent="GridContainer"]
visible = false
layout_mode = 2
text = "Negation
"

[node name="IfButton" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(200, 50)
layout_direction = 2
layout_mode = 2
action_mode = 0
text = "If"

[node name="DirectionButton" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Direction"

[node name="ConditionButton" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Condition"

[node name="GetVarButton" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Get Var"

[node name="VarButton" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(200, 50)
layout_direction = 2
layout_mode = 2
action_mode = 0
text = "Var"

[node name="MoveButton" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(200, 50)
layout_direction = 2
layout_mode = 2
action_mode = 0
text = "Move Robot"

[node name="RotateButton" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(200, 50)
layout_direction = 2
layout_mode = 2
action_mode = 0
text = "Rotate"

[node name="BumperButton" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(200, 50)
layout_direction = 2
layout_mode = 2
action_mode = 0
text = "Is Bumper Colliding"

[node name="LaserCollidingButton" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(200, 50)
layout_direction = 2
layout_mode = 2
action_mode = 0
text = "Is Laser Colliding"

[node name="LaserButton" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(200, 50)
layout_direction = 2
layout_mode = 2
action_mode = 0
text = "Distance to Laser Target
"

[node name="JumpButton" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(200, 50)
layout_direction = 2
layout_mode = 2
action_mode = 0
text = "Jump
"

[node name="DeleteButton" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Delete Selected Block
"

[connection signal="pressed" from="GridContainer/PrintButton" to="." method="_on_print_button_pressed"]
[connection signal="pressed" from="GridContainer/ArithmeticButton" to="." method="_on_arithmetic_button_pressed"]
[connection signal="pressed" from="GridContainer/SetVarButton" to="." method="_on_set_var_button_pressed"]
[connection signal="pressed" from="GridContainer/NegationButton" to="." method="_on_negation_button_pressed"]
[connection signal="pressed" from="GridContainer/IfButton" to="." method="_on_if_button_pressed"]
[connection signal="pressed" from="GridContainer/DirectionButton" to="." method="_on_direction_button_pressed"]
[connection signal="pressed" from="GridContainer/ConditionButton" to="." method="_on_condition_button_pressed"]
[connection signal="pressed" from="GridContainer/GetVarButton" to="." method="_on_get_var_button_pressed"]
[connection signal="pressed" from="GridContainer/VarButton" to="." method="_on_var_button_pressed"]
[connection signal="pressed" from="GridContainer/MoveButton" to="." method="_on_move_button_pressed"]
[connection signal="pressed" from="GridContainer/RotateButton" to="." method="_on_rotate_button_pressed"]
[connection signal="pressed" from="GridContainer/BumperButton" to="." method="_on_bumper_button_pressed"]
[connection signal="pressed" from="GridContainer/LaserCollidingButton" to="." method="_on_laser_colliding_button_pressed"]
[connection signal="pressed" from="GridContainer/LaserButton" to="." method="_on_laser_button_pressed"]
[connection signal="pressed" from="GridContainer/JumpButton" to="." method="_on_jump_button_pressed"]
[connection signal="pressed" from="GridContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
